tests/parser-test-files/bad-files/define-type.7.error
error: Malformed type definition
  --> test:4:14
   |
 4 |  (define-type ("T" :a :b))
   |                ^^^ expected symbol
